fix(cards): fixed title above card on mobile (#182)

--- a/style/elvis/css/elvis.css
+++ b/style/elvis/css/elvis.css
@@ -845,7 +845,8 @@ input:focus {
   letter-spacing: 0.8px;
   text-transform: uppercase;
   position: absolute;
-  top: -32px;
+  transform: translateY(-100%);
+  top: -8px;
   left: 8px;
 }
 
